--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.10.1.jar=web/WEB-INF/lib/gson-2.10.1.jar
 file.reference.mssql-jdbc-9.4.1.jre8.jar=web/WEB-INF/lib/mssql-jdbc-9.4.1.jre8.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${file.reference.mssql-jdbc-9.4.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.4.1.jre8.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
